--- a/arch/arm/configs/odroidxu4_defconfig
+++ b/arch/arm/configs/odroidxu4_defconfig
@@ -2510,6 +2510,7 @@ CONFIG_I2C_ALGOBIT=y
 # CONFIG_I2C_EMEV2 is not set
 CONFIG_I2C_EXYNOS5=y
 CONFIG_I2C_GPIO=y
+CONFIG_I2C_GPIO_CUSTOM=m
 # CONFIG_I2C_NOMADIK is not set
 # CONFIG_I2C_OCORES is not set
 # CONFIG_I2C_PCA_PLATFORM is not set
