--- a/arch/arm/configs/odroidxu4_defconfig
+++ b/arch/arm/configs/odroidxu4_defconfig
@@ -3030,6 +3030,8 @@ CONFIG_REGULATOR_S5M8767=y
 # CONFIG_REGULATOR_TPS6524X is not set
 # CONFIG_REGULATOR_VCTRL is not set
 # CONFIG_REGULATOR_WM8994 is not set
+CONFIG_CEC_CORE=y
+CONFIG_CEC_NOTIFIER=y
 CONFIG_RC_CORE=y
 CONFIG_RC_MAP=y
 CONFIG_RC_DECODERS=y
@@ -3071,7 +3073,8 @@ CONFIG_MEDIA_ANALOG_TV_SUPPORT=y
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
 CONFIG_MEDIA_RADIO_SUPPORT=y
 CONFIG_MEDIA_SDR_SUPPORT=y
-# CONFIG_MEDIA_CEC_SUPPORT is not set
+CONFIG_MEDIA_CEC_SUPPORT=y
+# CONFIG_MEDIA_CEC_RC is not set
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_MEDIA_CONTROLLER_DVB=y
 CONFIG_VIDEO_DEV=y
@@ -3261,6 +3264,12 @@ CONFIG_VIDEO_EM28XX_RC=m
 CONFIG_USB_AIRSPY=m
 CONFIG_USB_HACKRF=m
 CONFIG_USB_MSI2500=m
+
+#
+# USB HDMI CEC adapters
+#
+# CONFIG_USB_PULSE8_CEC is not set
+# CONFIG_USB_RAINSHADOW_CEC is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
 # CONFIG_VIDEO_MUX is not set
 # CONFIG_SOC_CAMERA is not set
@@ -3287,6 +3296,8 @@ CONFIG_VIDEO_VIVID_MAX_DEVS=64
 # CONFIG_VIDEO_VIM2M is not set
 CONFIG_DVB_PLATFORM_DRIVERS=y
 # CONFIG_DVB_C8SECTPFE is not set
+CONFIG_CEC_PLATFORM_DRIVERS=y
+CONFIG_VIDEO_SAMSUNG_S5P_CEC=y
 # CONFIG_SDR_PLATFORM_DRIVERS is not set
 
 #
