--- a/arch/arm/configs/odroidxu4_defconfig
+++ b/arch/arm/configs/odroidxu4_defconfig
@@ -4741,6 +4741,7 @@ CONFIG_STAGING_MEDIA=y
 # CONFIG_I2C_BCM2048 is not set
 CONFIG_LIRC_STAGING=y
 # CONFIG_LIRC_ZILOG is not set
+CONFIG_LIRC_ODROID=m
 
 #
 # Android
