ODROID-COMMON: dts/overlays: Introduce device tree overlays
Copy *.dtbo files at arch/arm64/boot/dts/amlogic/overlays to boot
partition, e.g, /media/boot/overlays/. Then use "fdtoverlay" tool
to integrate DTB and DTBOs. Or, you also can use "fdt apply" u-boot
command to prepare device tree blob at booting time.

Signed-off-by: Yang Deokgyu <secugyu@gmail.com>
Change-Id: Ie68abf53d832d82b17b186093d7cb04f62991aef

--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -10,3 +10,6 @@ endif
 dtb-$(CONFIG_ARCH_MESON64_ODROIDC4) += meson64_odroidc4.dtb
 dtb-$(CONFIG_ARCH_MESON64_ODROIDN2) += meson64_odroidn2.dtb
 dtb-$(CONFIG_ARCH_MESON64_ODROIDN2) += meson64_odroidn2_drm.dtb
+
+subdir-$(CONFIG_ARCH_MESON64_ODROIDC4) += overlays/odroidc4
+subdir-$(CONFIG_ARCH_MESON64_ODROIDN2) += overlays/odroidn2
