--- a/arch/arm64/boot/dts/amlogic/meson64_odroidc4.dts
+++ b/arch/arm64/boot/dts/amlogic/meson64_odroidc4.dts
@@ -772,7 +772,7 @@
 		status = "disabled";
 	};
 
-	hktft35 {
+	hktft35: hktft35 {
 		status = "disabled";
 		compatible = "odroid,hktft35";
 		pinctrl-names = "hktft35";
@@ -927,7 +927,7 @@
 };
 
 &uart_A {
-	status = "okay";
+	status = "disabled";
 };
 
 &usb3_phy_v2 {
@@ -1013,7 +1013,7 @@
 }; /* end of pinctrl_aobus */
 
 &spicc0 {
-	status = "okay";
+	status = "disabled";
 
 	/*
 	 40 Pin Header : MOSI(GPIOX.8->19 Pin), MISO(GPIOX.9->21 Pin),
@@ -1036,8 +1036,8 @@
 		gpio-irq = <&gpio GPIOX_3 GPIO_ACTIVE_LOW>;
 	};
 
-	spidev@0 {
-		status = "okay";
+	spidev: spidev@0 {
+		status = "disabled";
 
 		compatible = "linux,spidev";
 		/* spi default max clock 100Mhz */
@@ -1046,7 +1046,7 @@
 	};
 
 	/* SPI 3.2" Touch Screen Define */
-	ads7846@1 {
+	ads7846: ads7846@1 {
 		status = "disabled";
 
 		spi-max-frequency = <1000000>;
@@ -1069,7 +1069,7 @@
 		linux,wakeup;
 	};
 
-	hktft32@0 {
+	hktft32: hktft32@0 {
 		status = "disabled";
 		compatible = "odroid,hktft32";
 		reg = <0>;
@@ -1099,6 +1099,8 @@
 };
 
 &i2c2 {
+	status = "disabled";
+
 	pcf8563: rtc@51 {
 		status = "disabled";
 		compatible = "nxp,pcf8563";
