--- a/arch/arm64/boot/dts/amlogic/meson64_odroidn2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson64_odroidn2.dts
@@ -648,8 +648,8 @@
 };
 
 &pwm_ab {
-		status = "okay";
-	};
+	status = "disabled";
+};
 
 &reboot {
 	sd_volsw_gpio = <&gpio_ao GPIOAO_9 GPIO_ACTIVE_HIGH>;
@@ -712,11 +712,12 @@
 
 
 &saradc {
-	status = "okay";
+	status = "disabled";
 };
 
 &i2c2 {
-	status = "okay";
+	/* default i2c clock-frequency is 400Khz */
+	status = "disabled";
 	pinctrl-names = "default","gpio_periphs";
 	/* 40 Pin Header : SDA(GPIOX.17->3 Pin), SCL(GPIOX.18->5 Pin) */
 	pinctrl-0 = <&i2c2_master_pins1>;
@@ -727,40 +728,16 @@
 
 &i2c3 {
 	/* default i2c clock-frequency is 100Khz */
-	status = "okay";
-
-	pcf8563: rtc@51 {
-		compatible = "nxp,pcf8563";
-		reg = <0x51>;
-	};
-
-	/* Hardkernel I2C 3.5" Touchscreen */
-	/* drivers/input/sx8650.c */
-	sx865x: sx865x@49	{
-		status = "disabled";
-		compatible = "semtech,sx8650";
-		reg = <0x49>;
-		#clock-cells = <0>;
-
-		/* H/W Pin control setup */
-		/* ODROID-N2 */
-		gpio-pendown = <&gpio GPIOX_19 GPIO_ACTIVE_LOW>;
-		gpio-reset   = <&gpio GPIOA_12 GPIO_ACTIVE_LOW>;
-
-		/* platform data setup */
-		invert-x = <0>;
-		invert-y = <1>;
-		swap-xy = <1>;
-	};
+	status = "disabled";
 };
 
 &spicc0 {
 	status = "disabled";
 
 	/*
-	 40 Pin Header : MOSI(GPIOX.8->19 Pin), MISO(GPIOX.9->21 Pin),
-			 SPI0_CLK(GPIOX.11->23 Pin)
-			 SPI_CE0(GPIOX.2->22 Pin), SPI_CE1(GPIOX.10->24 Pin)
+	40 Pin Header : MOSI(GPIOX.8->19 Pin), MISO(GPIOX.9->21 Pin),
+			SPI0_CLK(GPIOX.11->23 Pin)
+			SPI_CE0(GPIOX.2->22 Pin), SPI_CE1(GPIOX.10->24 Pin)
 	*/
 	pinctrl-names = "default","gpio_periphs";
 	pinctrl-0 = <&spicc0_pins_x>;
@@ -768,7 +745,7 @@
 	num_chipselect = <2>;
 
 	cs-gpios = <&gpio GPIOX_10 GPIO_ACTIVE_LOW>,
-		   <&gpio GPIOA_4 GPIO_ACTIVE_LOW>;
+		<&gpio GPIOA_4 GPIO_ACTIVE_LOW>;
 
 	can0: can@0 {
 		compatible = "microchip,mcp2515";
@@ -778,37 +755,12 @@
 		gpio-irq = <&gpio GPIOX_3 GPIO_ACTIVE_LOW>;
 	};
 
-	spidev@0 {
+	spidev: spidev@0 {
 		status = "disabled";
-
-		compatible = "linux,spidev";
+		compatible = "linux, spidev";
+		reg = <0>;
 		/* spi default max clock 100Mhz */
 		spi-max-frequency = <100000000>;
-		reg = <0>;
-	};
-
-	/* SPI 3.2" Touch Screen Define */
-	ads7846@1 {
-		status = "disabled";
-
-		spi-max-frequency = <1000000>;
-
-		compatible = "ti,ads7846";
-
-		reg = <1>;
-
-		/* ODROID-N2 Touch interrupt gpio */
-		pendown-gpio = <&gpio GPIOX_3 GPIO_ACTIVE_HIGH>;
-
-		ti,swap-xy = <1>;
-		ti,x-min = /bits/ 16 <0>;
-		ti,x-max = /bits/ 16 <8000>;
-		ti,y-min = /bits/ 16 <0>;
-		ti,y-max = /bits/ 16 <4800>;
-		ti,x-plate-ohms = /bits/ 16 <40>;
-		ti,pressure-max = /bits/ 16 <255>;
-
-		linux,wakeup;
 	};
 };
 
