ODROID-N2: arm64/dts: Add hktft32 node to support HK 3.2 inch touchscreen shield
Signed-off-by: Deokgyu Yang <secugyu@gmail.com>
Change-Id: I1cbe2fa7479a211fd0a13923b5ef29ae2d0a5a84

--- a/arch/arm64/boot/dts/amlogic/meson64_odroidn2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson64_odroidn2.dts
@@ -809,6 +809,34 @@
 		/* spi default max clock 100Mhz */
 		spi-max-frequency = <100000000>;
 	};
+
+	hktft32@0 {
+		status = "disabled";
+		compatible = "odroid,hktft32";
+		reg = <0>;
+		pinctrl-names = "hktft32";
+		pinctrl-0 = <&hktft32_pins>;
+
+		spi-max-frequency = <40000000>;
+		rotate = <90>;
+		bgr;
+		backlight;
+		fps = <20>;
+		bpp = <16>;
+		reset-gpios = <&gpio GPIOX_4 GPIO_ACTIVE_LOW>;
+		dc-gpios = <&gpio GPIOX_7 GPIO_ACTIVE_LOW>;
+		debug = <0>;
+
+		hktft32_pins: hktft32_pins {
+			mux {
+				groups = "GPIOX_4",
+					"GPIOX_7";
+				function = "gpio_periphs";
+				output-high;
+				drive-strength = <3>;
+			};
+		};
+	};
 };
 
 &spifc {
