--- a/arch/arm64/boot/dts/amlogic/meson64_odroidn2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson64_odroidn2.dts
@@ -829,6 +829,30 @@
 		spi-max-frequency = <100000000>;
 	};
 
+	/* SPI 3.2" Touch Screen Define */
+	ads7846@1 {
+		status = "disabled";
+
+		spi-max-frequency = <1000000>;
+
+		compatible = "ti,ads7846";
+
+		reg = <1>;
+
+		/* ODROID-N2 Touch interrupt gpio */
+		pendown-gpio = <&gpio GPIOX_3 GPIO_ACTIVE_HIGH>;
+
+		ti,swap-xy = <1>;
+		ti,x-min = /bits/ 16 <0>;
+		ti,x-max = /bits/ 16 <8000>;
+		ti,y-min = /bits/ 16 <0>;
+		ti,y-max = /bits/ 16 <4800>;
+		ti,x-plate-ohms = /bits/ 16 <40>;
+		ti,pressure-max = /bits/ 16 <255>;
+
+		linux,wakeup;
+	};
+
 	hktft32@0 {
 		status = "disabled";
 		compatible = "odroid,hktft32";
