ODROID-N2: arm64/dts: Add overlays for hktft32, hktft35
Signed-off-by: Deokgyu Yang <secugyu@gmail.com>
Change-Id: I7de72a741013e9275a0a8b6fe827119799701d92

--- a/arch/arm64/boot/dts/amlogic/meson64_odroidn2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson64_odroidn2.dts
@@ -482,7 +482,7 @@
 		cooling-levels = <0 120 170 220>;
 	};
 
-	hktft35 {
+	hktft35: hktft35 {
 		status = "disabled";
 		compatible = "odroid,hktft35";
 		pinctrl-names = "hktft35";
@@ -830,7 +830,7 @@
 	};
 
 	/* SPI 3.2" Touch Screen Define */
-	ads7846@1 {
+	ads7846: ads7846@1 {
 		status = "disabled";
 
 		spi-max-frequency = <1000000>;
@@ -853,7 +853,7 @@
 		linux,wakeup;
 	};
 
-	hktft32@0 {
+	hktft32: hktft32@0 {
 		status = "disabled";
 		compatible = "odroid,hktft32";
 		reg = <0>;
