--- a/arch/arm64/boot/dts/amlogic/overlays/odroidn2/Makefile
+++ b/arch/arm64/boot/dts/amlogic/overlays/odroidn2/Makefile
@@ -5,6 +5,8 @@ dtbo-$(CONFIG_ARCH_MESON64_ODROIDN2) += spi0.dtbo	\
 					i2c1.dtbo	\
 					uarta.dtbo	\
 					uartb.dtbo	\
+					hktft32.dtbo	\
+					hktft35.dtbo	\
 					saradc.dtbo	\
 					irblaster.dtbo
 
