ODROID-COMMON: arm64/dts: Move peripheral nodes from dts to each dtbos
Signed-off-by: Deokgyu Yang <secugyu@gmail.com>
Change-Id: I5ffdd2a3ab7051e9866d92d5d91731a33641e534

--- a/arch/arm64/boot/dts/amlogic/overlays/odroidc4/hktft32.dts
+++ b/arch/arm64/boot/dts/amlogic/overlays/odroidc4/hktft32.dts
@@ -1,28 +1,46 @@
 /dts-v1/;
 /plugin/;
 
+#include <dt-bindings/gpio/meson-g12a-gpio.h>
+#include <dt-bindings/gpio/gpio.h>
+
 / {
 	fragment@0 {
-		target = <&spi0>;
+		target = <&spicc0>;
+
+		#address-cells = <1>;
+		#size-cells = <0>;
 
 		__overlay__ {
 			status = "okay";
-		};
-	};
 
-	fragment@1 {
-		target = <&hktft32>;
+			hktft32: hktft32@0 {
+				status = "okay";
+				compatible = "odroid,hktft32";
+				reg = <0>;
+				pinctrl-names = "hktft32";
+				pinctrl-0 = <&hktft32_pins>;
 
-		__overlay__ {
-			status = "okay";
-		};
-	};
+				spi-max-frequency = <40000000>;
+				rotate = <90>;
+				bgr;
+				backlight;
+				fps = <20>;
+				bpp = <16>;
+				reset-gpios = <&gpio GPIOX_4 GPIO_ACTIVE_LOW>;
+				dc-gpios = <&gpio GPIOX_7 GPIO_ACTIVE_LOW>;
+				debug = <0>;
 
-	fragment@2 {
-		target = <&ads7846>;
-
-		__overlay__ {
-			status = "okay";
+				hktft32_pins: hktft32_pins {
+					mux {
+						groups = "GPIOX_4",
+							"GPIOX_7";
+						function = "gpio_periphs";
+						output-high;
+						drive-strength = <3>;
+					};
+				};
+			};
 		};
 	};
 };
