--- a/arch/arm64/boot/dts/amlogic/overlays/odroidn2/Makefile
+++ b/arch/arm64/boot/dts/amlogic/overlays/odroidn2/Makefile
@@ -1,13 +1,15 @@
 # Overlays for the Odroid platform
 
-dtbo-$(CONFIG_ARCH_MESON64_ODROIDN2) += spi0.dtbo	\
-					i2c0.dtbo	\
-					i2c1.dtbo	\
-					uarta.dtbo	\
-					uartb.dtbo	\
-					hktft32.dtbo	\
-					hktft35.dtbo	\
-					saradc.dtbo	\
+dtbo-$(CONFIG_ARCH_MESON64_ODROIDN2) += spi0.dtbo		\
+					i2c0.dtbo		\
+					i2c1.dtbo		\
+					uarta.dtbo		\
+					uartb.dtbo		\
+					hktft32.dtbo		\
+					hktft35.dtbo		\
+					ads7846.dtbo		\
+					sx865x-i2c1.dtbo	\
+					saradc.dtbo		\
 					irblaster.dtbo
 
 targets	+= $(dtbo-y)
