--- a/arch/arm64/boot/dts/amlogic/overlays/odroidc4/Makefile
+++ b/arch/arm64/boot/dts/amlogic/overlays/odroidc4/Makefile
@@ -1,15 +1,16 @@
 # Overlays for the Odroid platform
 
-dtbo-$(CONFIG_ARCH_MESON64_ODROIDC4) += spi0.dtbo	\
-					i2c2.dtbo	\
-					i2c3.dtbo	\
-					uarta.dtbo	\
-					uartb.dtbo	\
-					uartc.dtbo	\
-					hktft32.dtbo	\
-					hktft35.dtbo	\
-					pcf8563.dtbo	\
-					pcm5242.dtbo
+dtbo-$(CONFIG_ARCH_MESON64_ODROIDC4) += spi0.dtbo		\
+					i2c0.dtbo		\
+					i2c1.dtbo		\
+					uarta.dtbo		\
+					uartb.dtbo		\
+					uartc.dtbo		\
+					hktft32.dtbo		\
+					hktft35.dtbo		\
+					ads7846.dtbo		\
+					sx865x-i2c1.dtbo	\
+					pcf8563.dtbo
 
 targets	+= $(dtbo-y)
 always	:= $(dtbo-y)
