--- a/arch/arm64/boot/dts/amlogic/overlays/odroidc4/i2c1.dts
+++ b/arch/arm64/boot/dts/amlogic/overlays/odroidc4/i2c1.dts
@@ -3,6 +3,8 @@
 
 / {
 	fragment@0 {
+		// i2c3 aliased with i2c1.
+		// This activates i2c3 but it will be named as i2c1 on the userspace.
 		target = <&i2c3>;
 
 		__overlay__ {
