--- a/arch/arm64/boot/dts/amlogic/overlays/odroidc4/pcf8563.dts
+++ b/arch/arm64/boot/dts/amlogic/overlays/odroidc4/pcf8563.dts
@@ -3,18 +3,17 @@
 
 / {
 	fragment@0 {
+		// i2c2 aliased with i2c0.
 		target = <&i2c2>;
 
 		__overlay__ {
 			status = "okay";
-		};
-	};
 
-	fragment@1 {
-		target = <&pcf8563>;
-
-		__overlay__ {
-			status = "okay";
+			pcf8563: rtc@51 {
+				status = "okay";
+				compatible = "nxp,pcf8563";
+				reg = <0x51>;
+			};
 		};
 	};
 };
