ODROID-C4: move Hifi-Shield supports as DTBO
Signed-off-by: Dongjin Kim <tobetter@gmail.com>
Change-Id: I5794046e446e6b55bccf9b062ebd62f2108f0f00

--- a/arch/arm64/boot/dts/amlogic/overlays/odroidc4/Makefile
+++ b/arch/arm64/boot/dts/amlogic/overlays/odroidc4/Makefile
@@ -12,7 +12,9 @@ dtbo-$(CONFIG_ARCH_MESON64_ODROIDC4) += spi0.dtbo		\
 					sx865x-i2c1.dtbo	\
 					pcf8563.dtbo		\
 					onewire.dtbo		\
-					can0.dtbo
+					can0.dtbo		\
+					hifishield.dtbo		\
+					hifishield2.dtbo
 
 targets	+= $(dtbo-y)
 always	:= $(dtbo-y)
