ODROID-COMMON: arm64/dts: move onewire node to each overlay directory
Change-Id: Id0262986d0faceba5997e8bff9d89833aff8f5a0

--- a/arch/arm64/boot/dts/amlogic/overlays/odroidn2/Makefile
+++ b/arch/arm64/boot/dts/amlogic/overlays/odroidn2/Makefile
@@ -10,7 +10,8 @@ dtbo-$(CONFIG_ARCH_MESON64_ODROIDN2) += spi0.dtbo		\
 					ads7846.dtbo		\
 					sx865x-i2c1.dtbo	\
 					saradc.dtbo		\
-					irblaster.dtbo
+					irblaster.dtbo		\
+					onewire.dtbo
 
 targets	+= $(dtbo-y)
 always	:= $(dtbo-y)
