ODROID-C4/N2: fix to remove compile warning of 'Warning (reg_format): "reg" property in ...'
Signed-off-by: Dongjin Kim <tobetter@gmail.com>
Change-Id: Idd344270f12652a45511fad02330efd7b0a0ea98

--- a/arch/arm64/boot/dts/amlogic/overlays/odroidc4/pcf8563.dts
+++ b/arch/arm64/boot/dts/amlogic/overlays/odroidc4/pcf8563.dts
@@ -9,6 +9,9 @@
 		__overlay__ {
 			status = "okay";
 
+			#address-cells = <1>;
+			#size-cells = <0>;
+
 			pcf8563: rtc@51 {
 				status = "okay";
 				compatible = "nxp,pcf8563";
