ODROID-COMMON: arm64/dts: move can0 node to each overlay directory
Change-Id: Id193255239af6dbe0b8e7a80779ea5f3cfee2e6b

--- a/arch/arm64/boot/dts/amlogic/overlays/odroidn2/Makefile
+++ b/arch/arm64/boot/dts/amlogic/overlays/odroidn2/Makefile
@@ -11,7 +11,8 @@ dtbo-$(CONFIG_ARCH_MESON64_ODROIDN2) += spi0.dtbo		\
 					sx865x-i2c1.dtbo	\
 					saradc.dtbo		\
 					irblaster.dtbo		\
-					onewire.dtbo
+					onewire.dtbo		\
+					can0.dtbo
 
 targets	+= $(dtbo-y)
 always	:= $(dtbo-y)
