--- a/arch/arm64/boot/dts/amlogic/overlays/odroidc4/Makefile
+++ b/arch/arm64/boot/dts/amlogic/overlays/odroidc4/Makefile
@@ -11,7 +11,8 @@ dtbo-$(CONFIG_ARCH_MESON64_ODROIDC4) += spi0.dtbo		\
 					ads7846.dtbo		\
 					sx865x-i2c1.dtbo	\
 					pcf8563.dtbo		\
-					onewire.dtbo
+					onewire.dtbo		\
+					can0.dtbo
 
 targets	+= $(dtbo-y)
 always	:= $(dtbo-y)
