ODROID-COMMON: arm64/dts: Rename uart DTBOs to use numerical order
Signed-off-by: Deokgyu Yang <secugyu@gmail.com>
Change-Id: Ie9d2325e83d9cbb4accfc21e5bac26f86275ed24

--- a/arch/arm64/boot/dts/amlogic/overlays/odroidn2/Makefile
+++ b/arch/arm64/boot/dts/amlogic/overlays/odroidn2/Makefile
@@ -3,8 +3,8 @@
 dtbo-$(CONFIG_ARCH_MESON64_ODROIDN2) += spi0.dtbo		\
 					i2c0.dtbo		\
 					i2c1.dtbo		\
-					uarta.dtbo		\
-					uartb.dtbo		\
+					uart0.dtbo		\
+					uart1.dtbo		\
 					hktft32.dtbo		\
 					hktft35.dtbo		\
 					ads7846.dtbo		\
