--- a/arch/arm64/boot/dts/amlogic/overlays/odroidc4/spi0.dts
+++ b/arch/arm64/boot/dts/amlogic/overlays/odroidc4/spi0.dts
@@ -7,14 +7,17 @@
 
 		__overlay__ {
 			status = "okay";
-		};
-	};
 
-	fragment@1 {
-		target = <&spidev>;
+			#address-cells = <1>;
+			#size-cells = <0>;
 
-		__overlay__ {
-			status = "okay";
+			spidev: spidev@0 {
+				status = "okay";
+				compatible = "linux,spidev";
+				reg = <0>;
+				/* spi default max clock 100Mhz */
+				spi-max-frequency = <100000000>;
+			};
 		};
 	};
 };
