--- a/arch/arm64/boot/dts/amlogic/overlays/odroidn2/spi0.dts
+++ b/arch/arm64/boot/dts/amlogic/overlays/odroidn2/spi0.dts
@@ -1,23 +1,23 @@
 /dts-v1/;
 /plugin/;
 
-#include <dt-bindings/gpio/meson-g12a-gpio.h>
-#include <dt-bindings/gpio/gpio.h>
-
 / {
 	fragment@0 {
 		target = <&spicc0>;
 
 		__overlay__ {
 			status = "okay";
-		};
-	};
 
-	fragment@1 {
-		target = <&spidev>;
+			#address-cells = <1>;
+			#size-cells = <0>;
 
-		__overlay__ {
-			status = "okay";
+			spidev: spidev@0 {
+				status = "okay";
+				compatible = "linux,spidev";
+				reg = <0>;
+				/* spi default max clock 100Mhz */
+				spi-max-frequency = <100000000>;
+			};
 		};
 	};
 };
