ODROID-N2: arm64/dts: add missing USB3 phy node entry
Change-Id: I38f3dfd4a0024de93d9816cfe4f71679666d833b
Signed-off-by: Dongjin Kim <tobetter@gmail.com>

--- a/arch/arm64/boot/dts/amlogic/meson64_odroidn2.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson64_odroidn2.dtsi
@@ -624,3 +624,11 @@
 		cs_gpios = <&gpio BOOT_14 GPIO_ACTIVE_LOW>;
 	};
 };
+
+&usb3_phy_v2 {
+	status = "okay";
+	portnum = <1>;
+	otg = <1>;
+	gpio-vbus-power = "GPIOH_6";
+	gpios = <&gpio GPIOH_6 GPIO_ACTIVE_HIGH>;
+};
