ODROID-N2: arm64/dts: enable missing RTC device (pcf8563)
Signed-off-by: Dongjin Kim <tobetter@gmail.com>
Change-Id: I8dfcb54c0e36a6106ad300eeb038d8e75fc88c21

--- a/arch/arm64/boot/dts/amlogic/meson64_odroidn2.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson64_odroidn2.dtsi
@@ -594,7 +594,12 @@
 
 &i2c3 {
 	/* default i2c clock-frequency is 100Khz */
-	status = "disabled";
+	status = "okay";
+
+	pcf8563: rtc@51 {
+		compatible = "nxp,pcf8563";
+		reg = <0x51>;
+	};
 };
 
 &spicc0 {
