ODROID-COMMON: config: remove 'CONFIG_AMLOGIC_VRTC'
Signed-off-by: Dongjin Kim <tobetter@gmail.com>
Change-Id: I988fb5f258d3ff5bedb8045202905336c6bb74f9

--- a/arch/arm64/configs/odroidg12_defconfig
+++ b/arch/arm64/configs/odroidg12_defconfig
@@ -1759,7 +1759,7 @@ CONFIG_AMLOGIC_MMC=y
 #
 # Meson8B NAND Device Support
 #
-CONFIG_AMLOGIC_VRTC=y
+# CONFIG_AMLOGIC_VRTC is not set
 CONFIG_AMLOGIC_SMARTCARD=y
 CONFIG_AMLOGIC_CEC=y
 CONFIG_AMLOGIC_AO_CEC=y
