ODROID-N2/PLUS: change cooling trip point to 'hot' for CPU core
Signed-off-by: Dongjin Kim <tobetter@gmail.com>
Change-Id: I7f1e50f52bbc7b08650e557c6cfc5a3debe2e257

--- a/arch/arm64/boot/dts/amlogic/meson64_odroidn2.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson64_odroidn2.dtsi
@@ -368,6 +368,9 @@
 		};
 	};
 	cooling-maps {
+		cpucore_cooling_map {
+			trip = <&phot>;
+		};
 		fan_cooling_map0 {
 			trip = <&fan_0>;
 			cooling-device = <&pwmfan 0 1>;
