ODROID-COMMON:Integrated uSD card reset according to odroid schematic for reboot.
Signed-off-by: ckkim <changkon12@gmail.com>
Change-Id: I252cbb12a3969bd24bc49217541c96de9a53a11e

--- a/arch/arm64/boot/dts/amlogic/meson64_odroidn2_plus.dts
+++ b/arch/arm64/boot/dts/amlogic/meson64_odroidn2_plus.dts
@@ -152,10 +152,8 @@
 	};
 }; /* end of / */
 
-&sd_emmc_b {
-	sd {
-		/delete-property/ gpio_power;
-	};
+&reboot {
+	sd_vddio_gpio = <&gpio_ao GPIOAO_3 GPIO_ACTIVE_HIGH>;
 };
 
 &soc_thermal {
