ODROID-N2L: rev_1.0 20220426 USB VBUS Power modify.
Signed-off-by: ckkim <changkon12@gmail.com>
Change-Id: I34bd7d36cecd7712ce93302debaf3930734465f5

--- a/arch/arm64/boot/dts/amlogic/meson64_odroidn2l.dts
+++ b/arch/arm64/boot/dts/amlogic/meson64_odroidn2l.dts
@@ -155,25 +155,16 @@
 
 }; /* end of / */
 
+&auge_sound {
+	/delete-node/ mute_gpio;
+};
+
 &ethmac {
 	status = "disabled";
 };
 
-&dwc2_a {
-	status = "okay";
-	port-type = <1>;	/** 0: otg, 1: host, 2: slave */
-	port-id-mode = <1>;	/** 0: hardware, 1: sw_host, 2: sw_slave*/
-
-	/* 0: normal, 1: host only, 2: device only 3: otg*/
-	controller-type = <3>;
-};
-
-&usb3_phy_v2 {
-	status = "okay";
-	portnum = <1>;
-	otg = <1>;
-	gpio-vbus-power = "GPIOH_6";
-	gpios = <&gpio GPIOH_6 GPIO_ACTIVE_HIGH>;
+&i2c3 {
+	status = "disabled";
 };
 
 &reboot {
